--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link href="https://fonts.cdnfonts.com/css/mars-2" rel="stylesheet">
+                
     <title>Solid App</title>
   </head>
   <body>
